--- a/answers/예시파일.md
+++ b/answers/예시파일.md
@@ -1,9 +1,6 @@
-나는  
-거상을  
-할 것이다.
+예시
+
+마크다운
   
-![예시 이미지1](/GersangStation/images/예시이미지1.jpg)
-
-하하하
-
-![예시 이미지2](/GersangStation/images/예시이미지2.png)
+![예시 이미지1](https://placehold.co/300x200/png)
+![예시 이미지2](/GersangStation/images/example.png)
